# agent-aware

./: .gitignore  CMakeLists.txt  PROJECT_PLAN.md  README.md  REPORT.md  exit.status
archive/: README.md
archive/build_info/: v0-smoke-2026-05-28.txt  v1-smoke-2026-05-28.txt  v2-main-2026-05-28.txt  v3-cache-2026-05-28.txt  v4-path-2026-05-28.txt  v5-mixed-2026-05-28.txt  v6-fileio-local-2026-05-28.txt  v7-signature-local-2026-05-29.txt  v8-freshvamana-lsm-local-2026-05-29.txt  v9-freshlsh-local-2026-05-29.txt
archive/configs/: v0-smoke-2026-05-28.json  v1-smoke-2026-05-28.json  v2-main-2026-05-28.json  v3-cache-2026-05-28.json  v4-path-2026-05-28.json  v5-mixed-2026-05-28.json  v6-fileio-local-2026-05-28.json  v7-signature-local-2026-05-29.json  v8-freshvamana-lsm-local-2026-05-29.json  v9-freshlsh-sift-local-2026-05-29.json
archive/results/: debug-recall-lowwidth-sift10k-20260609.txt  debug-recall-lowwidth-synthetic-20260609.txt  m1-synthetic-exact-20260605.txt  m1-synthetic-graph-budget-20260605.txt  m1-synthetic-mixed-budget-20260605.txt  m1-synthetic-pq-adc-rerank-20260605.txt  m1-synthetic-pq-adc-rerank-budget-20260605.txt  m1-synthetic-pq-overbudget-debug-20260605.txt  p3-cache-2q.txt  p3-cache-baseline.txt  p3-cache-graph-aware-2q-th16.txt  p3-cache-graph-aware-2q-th24.txt  p3-cache-graph-aware-2q-th32.txt  p3-cache-graph-aware-2q-th48.txt  p3-cache-graph-aware-2q-th8.txt  p3-cache-graph-aware-2q.txt  p3-cache-lru.txt  sift-local-exact-20260529-135239.txt  sift-local-exact-win-sift100k-full-20260602.txt  sift-local-graph-20260529-135459.txt  sift-local-graph-20260529-135848.txt  sift-local-graph-approx-20260529-142028.txt  sift-local-graph-approx-r32-20260529-142059.txt  sift-local-graph-ext4-sift100k-liburing-20260611-133000.txt  sift-local-graph-nocache-20260529-135634.txt  sift-local-graph-recall-sift10k-d16-w64.txt  sift-local-graph-recall-sift10k-w64.txt  sift-local-graph-scan95-w1024-full-e512-r8192-q1000.txt  sift-local-graph-scan95-w1280-full-e512-r8192-q100.txt  sift-local-graph-scan95-w1536-full-e512-r8192-q100.txt  sift-local-graph-scan95-w1536-min512-e512-r8192-q100.txt  sift-local-graph-win-adaptive-smoke-20260602.txt  sift-local-graph-win-hotpath-smoke-20260602.txt  sift-local-graph-win-io-uring-fallback-smoke-20260602.txt  sift-local-graph-win-odirect-fallback-smoke-20260602.txt  sift-local-graph-win-pq-adc-rerank-smoke-20260602.txt  sift-local-graph-win-pq-adc-rerank64-sequential-smoke-20260602.txt  sift-local-graph-win-pq-adc-smoke-20260602.txt  sift-local-graph-win-sift100k-full-w1024-m192-20260602.txt  sift-local-graph-win-sift100k-full-w128-m64-20260602.txt  (+34 more)
archive/validation/: validation-method-2026-05-28.md  validation-method-2026-05-29.md
bench/: agent_aware_flow.cpp  agentmem_flow.cpp  bench_mixed_rw.cpp  bench_sync_disk_read.cpp
docs/: AI_USAGE_DISCLOSURE.md  ARCHITECTURE.md  AUTODL_DEPLOYMENT.md  HIGH_CONCURRENCY_MIXED_RW_PLAN.md  ITERATION_TEMPLATE.md  P4_async_prefetch_report.md  PROJECT_PLAN.md  README.md  SYNTHETIC_VALIDATION_REPORT.md  VALIDATION_METHOD.md  WSL2_SIFT_VALIDATION_REPORT.md  WSL_COLD_START.md  changelog.md  p3_cache_zero_copy_report.md  p5_mixed_rw_benchmark.md  sift_experiment_report.md
docs/competition/: scoring-and-defense.md
docs/design/: 01-ssd-storage-path.md  02-cache-zero-copy.md  03-async-prefetch.md  04-beam-width-io-uring.md  05-dynamic-write.md  06-fresh-streaming-ann.md  07-prefetch-early-trigger-plan.md  08-prefetch_timing.md  09-XGBOOST_PREFETCH_PLAN.md  XGBOOST_PREFETCH_PLAN.md  async-prefetch.md  beam-width-io-uring.md  cache-zero-copy.md  dynamic-write.md  fresh-streaming-ann.md  prefetch_timing.md  ssd-storage-path.md
docs/experiments/: high-concurrency-mixed-rw.md  param-tuning-and-sift-scale-test.md  sift1m-mixed-rw-immutable-view.md
docs/iterations/: M0-analysis.md  M1-analysis.md  M2-analysis.md  M3-analysis.md  M4-analysis.md  v0-analysis.md  v1-analysis.md  v2-analysis.md  v3-analysis.md  v4-analysis.md  v5-1-analysis.md  v5-2-analysis.md  v5-analysis.md  v6-analysis.md  v7-analysis.md  v8-analysis.md  v9-analysis.md
docs/roadmap/: defense-gap-closure-plan.md  dynamic-write-task-breakdown.md  next-sift1m-mixed-rw-optimization.md  page-aware-prefetch-scheduling-plan.md  recall-to-io-tail-latency-plan.md
docs/roadmap in future/: next-sift1m-mixed-rw-optimization.md
include/: agent_aware.h  brute_force.h  dynamic_index.h  graph_index.h  types.h
include/agent_aware/: dataset.h
include/agentmem/: agent_mem_io.h  brute_force.h  dataset.h  dynamic_index.h  graph_index.h  metrics.h  types.h
include/core/: async_page_reader.h  io_stats.h  prefetch_planner.h  query_page_session.h  simd_distance.h
include/data/: dataset.h
include/dynamic/: compaction.h  dynamic_record.h  sstable.h
include/engine/: storage_engine.h
include/graph/: disk_graph_builder.h  disk_graph_index.h  entry_selector.h
include/storage/: disk_index_reader.h  disk_record.h  lsm_tree.h
logs/sift_bench/: sift1m_baseline_from_archive.json  sift1m_cache_io_from_archive.json  sift1m_search_width_scan_from_archive.json
scripts/: analyze_prefetch_trace.py  build.ps1  plot_sift_matrix.py  replay_prefetch_policy.py  run_agent_aware_flow_sift.py  run_agent_aware_sift.py  run_mixed_rw_bench.sh  run_prefetch_ab.py  run_prefetch_ab.sh  run_prefetch_closed_loop_smoke.sh  run_sift1m_once.sh  run_v0_smoke.ps1  run_v1_smoke.ps1  run_v2_compare.ps1  run_v3_cache_compare.ps1  run_v4_path_compare.ps1  run_v5_1_wal_replay.ps1  run_v5_2_delta_ann_compare.ps1  run_v5_mixed_compare.ps1  run_v6_fileio_compare.ps1  run_v7_signature_compare.ps1  train_prefetch_ranker.py
scripts/autodl/: collect_env.sh  drop_caches.sh  package_archive.sh  run_v6_sift_template.sh  run_v6_synthetic.sh
scripts/linux/: build.sh  build_diskann.sh  run_agent_aware_flow_sift.py  run_agentmem_flow_sift.py  (+14 more)
src/: brute_force.cpp  dataset.cpp  dynamic_index.cpp  graph_index.cpp  main.cpp  metrics.cpp  mixed_rw_benchmark.cpp  sift_search_benchmark.cpp
tests/: smoke_tests.cpp  test_cli_args.cpp  test_disk_index_rw.cpp  test_disk_record.cpp
(+90 files in other folders)
